# RateWatch

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  ratewatch.db
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/v1/: router.py
api/v1/routes/: history.py  rates.py  sources.py
cache/: __init__.py  redis_client.py
core/: __init__.py  aggregator.py  config.py  constants.py  errors.py  normalizer.py  scheduler.py  services.py
db/: __init__.py  crud.py  models.py  partitions.py  session.py
schemas/: __init__.py  history.py  rate.py  sources.py
sources/: __init__.py  base.py  currencyapi.py  ecb.py  frankfurter.py  http.py  openexchange.py
tests/: conftest.py
tests/integration/: test_history_api.py  test_rates_api.py
tests/unit/: test_aggregator.py  test_normalizer.py  test_sources.py  test_utc_handling.py
